BankingRole needs BankTransferHandler